2009-07-30  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] Initialize HTML5 Application Cache for QtWebKit to a sensible default
        https://bugs.webkit.org/show_bug.cgi?id=27866

        * Api/qwebpage.cpp:
        (initializeApplicationCachePathIfNecessary):
        (QWebPagePrivate::QWebPagePrivate):



git-svn-id: svn://svn.chromium.org/blink/trunk@46691 bbb929c8-8fbe-4397-9dbb-9b2b20218538