third_party/WebKit/WebKit/qt/Api/qwebpage.cpp
@@ -37,6 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "FrameLoaderClientQt.h"
 #include "FrameView.h"
 #include "FormState.h"
+#include "ApplicationCacheStorage.h"
 #include "ChromeClientQt.h"
 #include "ContextMenu.h"
 #include "ContextMenuClientQt.h"
@@ -76,6 +77,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QBasicTimer>
 #include <QBitArray>
 #include <QDebug>
+#include <QDesktopServices>
 #include <QDragEnterEvent>
 #include <QDragLeaveEvent>
 #include <QDragMoveEvent>
@@ -264,6 +266,30 @@ static inline Qt::DropAction dragOpToDropAction(unsigned actions)
     return result;
 }
 
+static void initializeApplicationCachePathIfNecessary()
+{
+#if ENABLE(OFFLINE_WEB_APPLICATIONS)
+    static bool initialized = false;
+        
+    if (initialized)
+        return;
+
+    // Determine the path for HTML5 Application Cache DB
+    QString appCachePath;
+#if QT_VERSION >= 0x040500
+    appCachePath = QDesktopServices::storageLocation(QDesktopServices::CacheLocation);
+#else
+    appCachePath = QDesktopServices::storageLocation(QDesktopServices::DataLocation);
+#endif
+
+    if (appCachePath.isEmpty())
+        appCachePath = QDir::homePath() + QLatin1String("/.") + QCoreApplication::applicationName();
+
+    WebCore::cacheStorage().setCacheDirectory(appCachePath);
+    initialized = true;
+#endif
+}                                                
+
 QWebPagePrivate::QWebPagePrivate(QWebPage *qq)
     : q(qq)
     , view(0)
@@ -272,6 +298,7 @@ QWebPagePrivate::QWebPagePrivate(QWebPage *qq)
     WebCore::InitializeLoggingChannelsIfNecessary();
     JSC::initializeThreading();
     WebCore::FrameLoader::setLocalLoadPolicy(WebCore::FrameLoader::AllowLocalLoadsForLocalAndSubstituteData);
+    initializeApplicationCachePathIfNecessary();
 
     chromeClient = new ChromeClientQt(q);
     contextMenuClient = new ContextMenuClientQt();
